--- a/index.html
+++ b/index.html
@@ -1287,7 +1287,8 @@ Thank you for choosing Roundwood Solutions for your grounds maintenance at ${sit
 
 We'd really appreciate it if you could take 2 minutes to leave us a review on Google. Your feedback helps us improve and helps other businesses find quality grounds maintenance services.
 
-Leave a review here: https://g.page/r/CdjsCHn8W_UHEAI/review
+Leave a review here:
+https://share.google/UWIBan6wN0IrYBI0t
 
 Thank you for your time and trust in our services.
 
