--- a/index.html
+++ b/index.html
@@ -3262,6 +3262,204 @@ This notification was generated automatically by Roundwood Route Manager.
             const completedToday = visits.filter(v => v.completedDate === today).length;
             document.getElementById('statCompletedToday').textContent = completedToday;
         }
+        // ============================================
+        // CALCULATOR FUNCTIONS
+        // ============================================
+        
+        // Calculator Functions
+        function calculate() {
+            const seconds = parseFloat(document.getElementById('seconds').value) || 90;
+            const nozzleOutput = parseFloat(document.getElementById('nozzleOutput').value) || 0;
+            const stripWidth = parseFloat(document.getElementById('stripWidth').value) || 1;
+            const sprayerCapacity = parseFloat(document.getElementById('sprayerCapacity').value) || 15;
+            const chemicalRate = parseFloat(document.getElementById('chemicalRate').value) || 0;
+            const area = parseFloat(document.getElementById('area').value) || 0;
+
+            // 1. Walking speed = 360 / seconds
+            const walkingSpeed = 360 / seconds;
+            document.getElementById('walkingSpeed').innerHTML = walkingSpeed.toFixed(2) + '<span class="calc-unit">KPH</span>';
+
+            // 2. Sprayer output = (600 * nozzleOutput) / stripWidth / walkingSpeed
+            const sprayerOutput = (600 * nozzleOutput) / stripWidth / walkingSpeed;
+            document.getElementById('sprayerOutput').innerHTML = sprayerOutput.toFixed(2) + '<span class="calc-unit">L/ha</span>';
+
+            // 3. Tanks per hectare = sprayerOutput / sprayerCapacity
+            const tanksPerHa = sprayerOutput / sprayerCapacity;
+            document.getElementById('tanksPerHa').innerHTML = tanksPerHa.toFixed(2) + '<span class="calc-unit">tanks</span>';
+
+            // 4. Chemical per tank = (chemicalRate * 1000) / tanksPerHa
+            const chemicalPerTank = tanksPerHa > 0 ? (chemicalRate * 1000) / tanksPerHa : 0;
+            document.getElementById('chemicalPerTank').innerHTML = chemicalPerTank.toFixed(2) + '<span class="calc-unit">mls</span>';
+
+            // 5. Total chemical = (chemicalRate / 10000) * area
+            const totalChemical = (chemicalRate / 10000) * area;
+            document.getElementById('totalChemical').innerHTML = totalChemical.toFixed(3) + '<span class="calc-unit">litres</span>';
+
+            // 6. Total water = (sprayerOutput / 10000) * area - totalChemical
+            const totalWater = (sprayerOutput / 10000) * area - totalChemical;
+            document.getElementById('totalWater').innerHTML = totalWater.toFixed(2) + '<span class="calc-unit">litres</span>';
+        }
+
+        // Add event listeners for real-time calculation
+        setTimeout(() => {
+            const inputs = ['seconds', 'nozzleOutput', 'stripWidth', 'sprayerCapacity', 'chemicalRate', 'area'];
+            inputs.forEach(id => {
+                const input = document.getElementById(id);
+                if (input) {
+                    input.addEventListener('input', calculate);
+                }
+            });
+        }, 1000);
+
+        // Save Calculation to Firebase
+        window.saveCalculation = async function() {
+            if (!window.currentUser) {
+                showCalcAlert('Please sign in to save calculations', 'error');
+                return;
+            }
+
+            const calcName = document.getElementById('calcName').value || 'Unnamed Calculation';
+            const nozzleOutput = parseFloat(document.getElementById('nozzleOutput').value) || 0;
+            const chemicalRate = parseFloat(document.getElementById('chemicalRate').value) || 0;
+            const area = parseFloat(document.getElementById('area').value) || 0;
+
+            if (nozzleOutput === 0) {
+                showCalcAlert('Please enter nozzle output', 'error');
+                return;
+            }
+
+            const calculation = {
+                name: calcName,
+                timestamp: Date.now(),
+                date: new Date().toLocaleDateString(),
+                inputs: {
+                    seconds: parseFloat(document.getElementById('seconds').value),
+                    nozzleOutput: nozzleOutput,
+                    stripWidth: parseFloat(document.getElementById('stripWidth').value),
+                    sprayerCapacity: parseFloat(document.getElementById('sprayerCapacity').value),
+                    chemicalRate: chemicalRate,
+                    area: area
+                },
+                results: {
+                    walkingSpeed: parseFloat(document.getElementById('walkingSpeed').textContent),
+                    sprayerOutput: parseFloat(document.getElementById('sprayerOutput').textContent),
+                    tanksPerHa: parseFloat(document.getElementById('tanksPerHa').textContent),
+                    chemicalPerTank: parseFloat(document.getElementById('chemicalPerTank').textContent),
+                    totalChemical: parseFloat(document.getElementById('totalChemical').textContent),
+                    totalWater: parseFloat(document.getElementById('totalWater').textContent)
+                }
+            };
+
+            try {
+                await window.dbSet(window.dbPush(window.dbRef(window.database, `users/${window.currentUser.uid}/calibrations`)), calculation);
+                showCalcAlert('Calculation saved successfully!', 'success');
+                document.getElementById('calcName').value = '';
+                loadSavedCalculations();
+            } catch (error) {
+                showCalcAlert('Error saving calculation: ' + error.message, 'error');
+            }
+        };
+
+        // Load Saved Calculations
+        function loadSavedCalculations() {
+            if (!window.currentUser) return;
+
+            const listDiv = document.getElementById('savedCalcsList');
+            listDiv.innerHTML = '<div class="loading">Loading...</div>';
+
+            window.dbOnValue(window.dbRef(window.database, `users/${window.currentUser.uid}/calibrations`), (snapshot) => {
+                const calcs = [];
+                snapshot.forEach((child) => {
+                    calcs.push({ id: child.key, ...child.val() });
+                });
+
+                calcs.reverse(); // Most recent first
+
+                if (calcs.length === 0) {
+                    listDiv.innerHTML = '<p style="text-align: center; color: var(--gray-500); padding: 2rem;">No saved calculations yet</p>';
+                    return;
+                }
+
+                listDiv.innerHTML = calcs.map(calc => `
+                    <div class="saved-calc-item" onclick="loadCalculation('${calc.id}')">
+                        <div class="saved-calc-header">
+                            <div class="saved-calc-title">${calc.name}</div>
+                            <div class="saved-calc-date">${calc.date}</div>
+                        </div>
+                        <div class="saved-calc-details">
+                            <div>Nozzle: ${calc.inputs.nozzleOutput} LPM</div>
+                            <div>Chemical: ${calc.inputs.chemicalRate} L/ha</div>
+                            <div>Area: ${calc.inputs.area} m²</div>
+                        </div>
+                        <div style="margin-top: 0.5rem; font-size: 0.875rem; color: var(--primary); font-weight: 600;">
+                            Total Chemical: ${calc.results.totalChemical.toFixed(3)}L | Water: ${calc.results.totalWater.toFixed(2)}L
+                        </div>
+                        <button class="btn btn-danger" style="margin-top: 0.5rem; padding: 0.5rem 1rem; font-size: 0.875rem;" onclick="event.stopPropagation(); deleteCalculation('${calc.id}')">Delete</button>
+                    </div>
+                `).join('');
+            });
+        }
+
+        // Load a specific calculation
+        window.loadCalculation = function(calcId) {
+            window.dbGet(window.dbRef(window.database, `users/${window.currentUser.uid}/calibrations/${calcId}`)).then((snapshot) => {
+                const calc = snapshot.val();
+                if (!calc) return;
+
+                // Load inputs
+                document.getElementById('calcName').value = calc.name;
+                document.getElementById('seconds').value = calc.inputs.seconds;
+                document.getElementById('nozzleOutput').value = calc.inputs.nozzleOutput;
+                document.getElementById('stripWidth').value = calc.inputs.stripWidth;
+                document.getElementById('sprayerCapacity').value = calc.inputs.sprayerCapacity;
+                document.getElementById('chemicalRate').value = calc.inputs.chemicalRate;
+                document.getElementById('area').value = calc.inputs.area;
+
+                // Recalculate
+                calculate();
+
+                // Scroll to top
+                window.scrollTo(0, 0);
+
+                showCalcAlert('Calculation loaded successfully!', 'success');
+            });
+        };
+
+        // Delete a calculation
+        window.deleteCalculation = async function(calcId) {
+            if (!confirm('Are you sure you want to delete this calculation?')) return;
+
+            try {
+                await window.dbRemove(window.dbRef(window.database, `users/${window.currentUser.uid}/calibrations/${calcId}`));
+                showCalcAlert('Calculation deleted', 'success');
+                loadSavedCalculations();
+            } catch (error) {
+                showCalcAlert('Error deleting calculation: ' + error.message, 'error');
+            }
+        };
+
+        // Reset Calculator
+        window.resetCalculator = function() {
+            document.getElementById('calcName').value = '';
+            document.getElementById('seconds').value = 90;
+            document.getElementById('nozzleOutput').value = '';
+            document.getElementById('stripWidth').value = 1;
+            document.getElementById('sprayerCapacity').value = 15;
+            document.getElementById('chemicalRate').value = '';
+            document.getElementById('area').value = '';
+            calculate();
+        };
+
+        // Show Alert
+        function showCalcAlert(message, type) {
+            const alertDiv = document.getElementById('calcAlert');
+            alertDiv.className = `alert alert-${type}`;
+            alertDiv.textContent = message;
+            alertDiv.style.display = 'block';
+            setTimeout(() => {
+                alertDiv.style.display = 'none';
+            }, 3000);
+        }
     </script>
 </body>
 </html>
