--- a/index.html
+++ b/index.html
@@ -1407,7 +1407,7 @@ This notification was generated automatically by Roundwood Route Manager.
                     "🔍 <strong>Site audits</strong> - Perfect time to walk sites and plan spring work programmes with clients."
                 ],
                 upsells: [
-                    "📋 <strong>Spring work packages</strong> - Offer comprehensive spring prep packages to clients now.",
+                    "📋 <strong>Spring preparation bundles</strong> - Package together scarifying, feeding, and overseeding into discounted spring packages. Book now for March/April work.",
                     "🌿 <strong>Mulching services</strong> - Propose mulching for beds before spring growth begins."
                 ]
             },
@@ -1419,7 +1419,7 @@ This notification was generated automatically by Roundwood Route Manager.
                 ],
                 upsells: [
                     "💚 <strong>Spring fertilizer treatments</strong> - Offer professional feed applications for healthier lawns.",
-                    "🌷 <strong>Bed preparation</strong> - Propose summer bedding plant installation and bed refresh services."
+                    "🌷 <strong>Summer bedding installation</strong> - Quote for installing colorful summer displays - book now for May planting."
                 ]
             },
             4: { // April
@@ -1462,7 +1462,7 @@ This notification was generated automatically by Roundwood Route Manager.
                     "🌾 <strong>Holiday cover</strong> - Plan staff rotas carefully to maintain service during holiday season."
                 ],
                 upsells: [
-                    "🌿 <strong>Lawn renovation packages</strong> - Propose autumn renovation work for tired lawns now.",
+                    "🌿 <strong>Book autumn renovation now</strong> - Pre-sell scarifying, aerating, and overseeding packages for September. Early booking discounts available.",
                     "💦 <strong>Water management services</strong> - Offer irrigation monitoring and water-saving solutions."
                 ]
             },
@@ -1473,8 +1473,8 @@ This notification was generated automatically by Roundwood Route Manager.
                     "☀️ <strong>Continue heat precautions</strong> - Keep cutting heights up, don't stress grass in dry spells."
                 ],
                 upsells: [
-                    "🌾 <strong>Autumn renovation services</strong> - Sell overseeding, scarification, and aeration packages now.",
-                    "🌳 <strong>Tree care</strong> - Propose tree health assessments and treatment programs."
+                    "🌾 <strong>Autumn renovation bookings</strong> - Scarifying removes thatch, aeration relieves compaction, overseeding thickens turf. Package all three for September.",
+                    "🌳 <strong>Tree health surveys</strong> - Professional tree inspections identify disease, decay, and hazards before winter storms."
                 ]
             },
             9: { // September
@@ -1484,8 +1484,8 @@ This notification was generated automatically by Roundwood Route Manager.
                     "💧 <strong>Reduce irrigation</strong> - Scale back watering as temperatures drop and rain increases."
                 ],
                 upsells: [
-                    "🍂 <strong>Gutter clearing</strong> - Offer autumn gutter and drain clearing services before leaf fall peaks.",
-                    "🌿 <strong>Lawn renovation</strong> - Final push on scarification and overseeding services this month."
+                    "🍂 <strong>Gutter clearing contracts</strong> - Prevent blockages and water damage. Quote for October/November monthly gutter clears.",
+                    "🌿 <strong>Lawn renovation final push</strong> - Last chance this year! Scarify dead thatch, aerate compacted soil, overseed thin patches."
                 ]
             },
             10: { // October
@@ -1517,8 +1517,8 @@ This notification was generated automatically by Roundwood Route Manager.
                     "📋 <strong>Year planning</strong> - Review year with clients, plan contracts and pricing for next season."
                 ],
                 upsells: [
-                    "📅 <strong>Next year's contracts</strong> - Secure contract renewals and increase annual frequencies now.",
-                    "🌲 <strong>Tree planting</strong> - Propose winter tree planting projects (dormant season planting)."
+                    "📅 <strong>Renew 2026 contracts now</strong> - Secure next year's business. Offer multi-year discounts or frequency increases for contract renewals.",
+                    "🌲 <strong>Bare-root tree planting</strong> - Winter is ideal for planting dormant bare-root trees. Quote for January/February planting projects."
                 ]
             }
         };
