--- a/index.html
+++ b/index.html
@@ -155,6 +155,12 @@
             justify-content: center;
         }
 
+        .btn-small {
+            padding: 0.5rem 0.75rem;
+            font-size: 0.875rem;
+            white-space: nowrap;
+        }
+
         .btn-primary {
             background: var(--primary);
             color: white;
@@ -3844,7 +3850,7 @@ This notification was generated automatically by Roundwood Route Manager.
                             </div>
                         </div>
                     ` : ''}
-                    <div style="display: flex; gap: 0.5rem;">
+                    <div style="display: flex; gap: 0.5rem; flex-wrap: wrap;">
                         ${actions}
                     </div>
                     ${reviewSection}
