--- a/index.html
+++ b/index.html
@@ -2305,6 +2305,7 @@
                             <option value="14">Fortnightly (14 days)</option>
                             <option value="28">4-Weekly (28 days)</option>
                             <option value="30">Monthly (30 days)</option>
+                            <option value="seasonal">Seasonal (Fortnightly Mar-Oct, Monthly Nov-Feb)</option>
                             <option value="0">Custom Schedule (set dates manually)</option>
                         </select>
                         <small>For Custom: You'll set the next visit date each time you complete a visit</small>
@@ -3298,7 +3299,7 @@ Site Information:
 Work Details:
 - Completed By: ${visit.completedBy}
 - Completed On: ${new Date(visit.completedDate).toLocaleDateString('en-GB')}
-- Invoice Amount: £${visit.price.toFixed(2)}
+- Invoice Amount: £${visit.price ? parseFloat(visit.price).toFixed(2) : '0.00'}
 
 Work Completed:
 ${workList.length > 0 ? workList.join('\n') : 'No tasks recorded'}
@@ -4444,7 +4445,8 @@ This notification was generated automatically by Roundwood Route Manager.
                     14: 'Fortnightly',
                     28: '4-Weekly',
                     30: 'Monthly',
-                    91: 'Quarterly'
+                    91: 'Quarterly',
+                    'seasonal': 'Seasonal'
                 }[site.frequency] || `Every ${site.frequency} days`;
 
                 return `
@@ -4502,7 +4504,7 @@ This notification was generated automatically by Roundwood Route Manager.
                             ` : ''}
                             <div class="meta-item">
                                 <div class="meta-label">Price</div>
-                                <div class="meta-value">£${site.price.toFixed(2)}</div>
+                                <div class="meta-value">£${site.price ? parseFloat(site.price).toFixed(2) : '0.00'}</div>
                             </div>
                             ${site.notes ? `
                                 <div class="meta-item" style="grid-column: 1 / -1;">
@@ -4850,7 +4852,7 @@ This notification was generated automatically by Roundwood Route Manager.
                     <div class="site-meta">
                         <div class="meta-item">
                             <div class="meta-label">Price</div>
-                            <div class="meta-value">£${project.price.toFixed(2)}</div>
+                            <div class="meta-value">£${project.price ? parseFloat(project.price).toFixed(2) : '0.00'}</div>
                         </div>
                         <div class="meta-item">
                             <div class="meta-label">Start Date</div>
@@ -5197,7 +5199,7 @@ Project Information:
 Work Details:
 - Completed By: ${completedBy}
 - Completed On: ${new Date(completedDate).toLocaleDateString('en-GB')}
-- Invoice Amount: £${project.price.toFixed(2)}
+- Invoice Amount: £${project.price ? parseFloat(project.price).toFixed(2) : '0.00'}
 
 Project Description:
 ${project.description}
@@ -5613,6 +5615,32 @@ This notification was generated automatically by Roundwood Route Manager.
                                 nextVisitCreated = true;
                             }
                         }
+                    } else if (visit.frequency === 'seasonal') {
+                        // Seasonal frequency - fortnightly Mar-Oct, monthly Nov-Feb
+                        const nextVisitDate = new Date(visit.scheduledDate);
+                        const currentMonth = nextVisitDate.getMonth(); // 0-11 (0=Jan, 11=Dec)
+                        
+                        // March-October (months 2-9) = Fortnightly (14 days)
+                        // November-February (months 10-11, 0-1) = Monthly (30 days)
+                        const isGrowingSeason = currentMonth >= 2 && currentMonth <= 9;
+                        const daysToAdd = isGrowingSeason ? 14 : 30;
+                        
+                        nextVisitDate.setDate(nextVisitDate.getDate() + daysToAdd);
+
+                        const nextVisitData = {
+                            siteId: visit.siteId,
+                            siteName: visit.siteName,
+                            siteAddress: visit.siteAddress,
+                            scheduledDate: nextVisitDate.toISOString().split('T')[0],
+                            price: visit.price,
+                            frequency: visit.frequency,
+                            status: 'pending',
+                            createdAt: new Date().toISOString()
+                        };
+
+                        const nextVisitRef = window.dbPush(window.dbRef(window.database, \`users/\${userId}/visits\`));
+                        await window.dbSet(nextVisitRef, nextVisitData);
+                        nextVisitCreated = true;
                     } else {
                         // Standard frequency - auto-calculate next visit
                         const nextVisitDate = new Date(visit.scheduledDate);
@@ -5731,7 +5759,7 @@ This notification was generated automatically by Roundwood Route Manager.
                             ` : ''}
                             <div class="meta-item">
                                 <div class="meta-label">Amount</div>
-                                <div class="meta-value">£${visit.price.toFixed(2)}</div>
+                                <div class="meta-value">£${visit.price ? parseFloat(visit.price).toFixed(2) : '0.00'}</div>
                             </div>
                             ${visit.completionNotes ? `
                                 <div class="meta-item" style="grid-column: 1 / -1;">
@@ -5809,7 +5837,7 @@ This notification was generated automatically by Roundwood Route Manager.
                                         ${item.siteAddress}
                                     </div>
                                     <div style="font-size: 0.85rem; color: var(--success); margin-top: 0.375rem; font-weight: 500;">
-                                        £${item.price.toFixed(2)}
+                                        £${item.price ? parseFloat(item.price).toFixed(2) : '0.00'}
                                     </div>
                                 </div>
                                 <div>
@@ -5897,7 +5925,7 @@ This notification was generated automatically by Roundwood Route Manager.
                                 </div>
                             </div>
                             <div style="font-size: 0.85rem; color: #9ca3af; margin-top: 0.5rem;">
-                                ${startDate.toLocaleDateString('en-GB')} → ${endDate.toLocaleDateString('en-GB')} • £${item.price.toFixed(2)}
+                                ${startDate.toLocaleDateString('en-GB')} → ${endDate.toLocaleDateString('en-GB')} • £${item.price ? parseFloat(item.price).toFixed(2) : '0.00'}
                             </div>
                         </div>
                     `;
@@ -5922,7 +5950,7 @@ This notification was generated automatically by Roundwood Route Manager.
                                     <button class="btn btn-success" onclick="switchToPipeline('${item.id}')" style="font-size: 0.85rem; padding: 0.375rem 0.75rem;">View in Pipeline</button>
                                 </div>
                             </div>
-                            ${item.estimatedValue ? `<div style="font-size: 0.85rem; color: #9ca3af; margin-top: 0.5rem;">Est. Value: £${item.estimatedValue.toFixed(2)}</div>` : ''}
+                            ${item.estimatedValue ? `<div style="font-size: 0.85rem; color: #9ca3af; margin-top: 0.5rem;">Est. Value: £${parseFloat(item.estimatedValue).toFixed(2)}</div>` : ''}
                         </div>
                     `;
                 }
@@ -7831,7 +7859,7 @@ Roundwood Solutions Limited
                 // Create CSV content for each sheet
                 let sitesCSV = 'Site Name,Address,Frequency,Contact,Phone,Email,Contract Notes,Status\n';
                 window.sites.forEach(site => {
-                    const freq = {7: 'Weekly', 14: 'Fortnightly', 28: '4-Weekly', 30: 'Monthly', 91: 'Quarterly'}[site.frequency] || site.frequency + ' days';
+                    const freq = {7: 'Weekly', 14: 'Fortnightly', 28: '4-Weekly', 30: 'Monthly', 91: 'Quarterly', 'seasonal': 'Seasonal'}[site.frequency] || site.frequency + ' days';
                     const status = site.paused ? 'Paused' + (site.pausedUntil ? ' until ' + formatDateForExcel(site.pausedUntil) : '') : 'Active';
                     sitesCSV += `"${site.name}","${site.address}","${freq}","${site.contact || ''}","${site.phone || ''}","${site.email || ''}","${site.contractNotes || ''}","${status}"\n`;
                 });
@@ -8307,7 +8335,7 @@ Roundwood Solutions Limited
                     // Sites
                     let sitesCSV = 'Site Name,Address,Frequency,Contact,Phone,Email,Contract Notes,Status\n';
                     window.sites.forEach(site => {
-                        const freq = {7: 'Weekly', 14: 'Fortnightly', 28: '4-Weekly', 30: 'Monthly', 91: 'Quarterly'}[site.frequency] || site.frequency + ' days';
+                        const freq = {7: 'Weekly', 14: 'Fortnightly', 28: '4-Weekly', 30: 'Monthly', 91: 'Quarterly', 'seasonal': 'Seasonal'}[site.frequency] || site.frequency + ' days';
                         const status = site.paused ? 'Paused' : 'Active';
                         sitesCSV += `"${site.name}","${site.address}","${freq}","${site.contact || ''}","${site.phone || ''}","${site.email || ''}","${site.contractNotes || ''}","${status}"\n`;
                     });
